src/objects/Program_SW_Project__c.object
<CustomObject>
    <description>Junction object to combine SW projects &amp; PMD Programs</description>
    <fields>
        <fullName>Experience_Product_Area__c</fullName>
        <formula>text(SW_Project__r.Product_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Experience Product Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_on_Release_Chart__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Determines if this is to show on the Release Chart  (uncheck for sunset releases)</inlineHelpText>
        <label>Include on Release Chart?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MR_Date__c</fullName>
        <inlineHelpText>If EOL, please enter &quot;1/1/2099&quot;</inlineHelpText>
        <label>MR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MR_Exp__c</fullName>
        <description>For Experiences</description>
        <inlineHelpText>For Experiences</inlineHelpText>
        <label>MR_Exp</label>
        <picklist>
            <picklistValues>
                <fullName>MR0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MR_Label__c</fullName>
        <description>For Release</description>
        <inlineHelpText>For Release</inlineHelpText>
        <label>MR Label</label>
        <picklist>
            <picklistValues>
                <fullName>MR0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POR_Grouping_Exp__c</fullName>
        <formula>SW_Project__r.POR_Grouping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POR Grouping Exp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_PMD__c</fullName>
        <label>Program  (PMD)</label>
        <referenceTo>PMD_Program__c</referenceTo>
        <relationshipLabel>SW Projects</relationshipLabel>
        <relationshipName>Program_SW_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program_Release_Status__c</fullName>
        <label>Program Release Status</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concept Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POR Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Life</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Status__c</fullName>
        <formula>text(Program_PMD__r.Program_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Project_Type__c</fullName>
        <formula>text(SW_Project__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SW Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Project__c</fullName>
        <label>SW Project</label>
        <referenceTo>JIRA_Project__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Program_SW_Projects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Support_Status__c</fullName>
        <label>Program Experience Support Status</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Supported at NPI Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Supported (PlayStore/MR update)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Supported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Supported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Program SW Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRSWP-{00000000}</displayFormat>
        <label>Program SW Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program SW Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>